viite-UI/src/less/core/forms.less
/* ... */
// Form groups
//
// Designed to help with the organization and spacing of vertical forms. For
// horizontal forms, use the predefined grid classes.

.form-group,
.split-form-group{
  margin-bottom: @input-margin;
}

.form-group-metadata{
  margin-top: @input-margin-short;
  margin-bottom: @input-margin-short;
}

.form-group-node-metadata{
  margin-top: @input-margin-short;
  margin-bottom: @input-margin-short;
  label{
    width: 75px;
    font-size: 11px;
    line-height: 15px;
    color: @warning !important;
    text-transform: none;
  }
}

// Checkboxes and radios
//
// Indent the labels to position radios/checkboxes as hanging controls.

.no-copy {
  -webkit-user-select: none;  /* Chrome all / Safari all */
  -moz-user-select: none;     /* Firefox all */
  -ms-user-select: none;      /* IE 10+ */
  user-select: none;          /* Likely future */
}


.radio,
.checkbox {
  display: block;
  min-height: @line-height-modifier * 3; // clear the floating input if there is no label text
  margin-bottom: @input-margin;
  margin-top: -1px;

  &:last-child {
  	margin-bottom: 0;
  }

  label {
    margin-bottom: 0;
    padding-left: 20px;
    margin-top: 5px;
    font-size: @font-size-base;
    font-weight: normal;
    color: @text-color;
    text-transform: none;
    cursor: pointer;
    .user-select(none);
  }
}
.radio input[type="radio"],
.radio-inline input[type="radio"],
.checkbox input[type="checkbox"],
.checkbox-inline input[type="checkbox"] {
  float: left;
  margin-left: -20px;
  .user-select(none);
}

.checkbox input[type="checkbox"] {
  position: relative;
  width: 12px;
  height: 12px;
  border: 1px solid @gray-darker;
  border-radius: @border-radius-small;
  outline: none;
  -webkit-appearance: none;
  .scale(0.9999);
  .transition(transform 0.05s ease-in-out);
  .transition(-webkit-transform 0.05s ease-in-out);
  .transition(-moz-transform 0.05s ease-in-out);
  .transition(-o-transform 0.05s ease-in-out);
  .transition(-ms-transform 0.05s ease-in-out);

  &:active {
    .scale(0.85);
  }

  &:checked {
    .icon-font;
    &:before {
      position: absolute;
      top: 0;
      left: 0;
      width: 12px;
      height: 12px;
      margin-left: -5px;
      margin-top: -5px;
      font-size: 18px;
      content: '\e804';
    }
  }
}

// Apply same disabled cursor tweak as for inputs
// Some special care is needed because <label>s don't inherit their parent's `cursor`.
//
// Note: Neither radios nor checkboxes can be readonly.
input[type="radio"],
input[type="checkbox"] {
  &[disabled],
  &.disabled,
  fieldset[disabled] & {
    cursor: not-allowed;
  }
}
// These classes are used directly on <label>s
.radio-inline,
.checkbox-inline {
  &.disabled,
  fieldset[disabled] & {
    cursor: not-allowed;
  }
}
// These classes are used on elements with <label> descendants
.radio,
.checkbox {
  &.disabled,
  fieldset[disabled] & {
    label {
      cursor: not-allowed;
    }
  }
}

// Static form control text
//
// Apply class to a `p` element to make any string of text align with labels in
// a horizontal form layout.

.form-control-static,
.form-control-static-floating,
.form-control-static-short {
  margin: 0; // Remove default margin from `p`
}

// Form control sizing
//
// Build on `.form-control` with modifier classes to decrease or increase the
// height and font-size of form controls.

.input-sm {
  height: (@line-height-modifier * 4) + 2; // Height at least of their button counterparts: line-height + padding + border
  padding: @line-height-modifier (@line-height-modifier * 1.5);
  font-size: @font-size-small;
  line-height: @line-height-modifier * 2;
}

form.roadAddressProject{
  width: 380px;
}
form.roadAddressProject .control-label,
form.roadAddressProject .control-label-projects {
  width: 110px !important;
}

form.roadAddressProject .control-label.required,
form.roadAddressProject .control-label-projects.required {
  color: @warning;
}

form.roadAddressProject .form-control.large-input {
  height: 150px !important;
  margin-top: 6px !important;
}

.form-result .control-label-small{
  margin-bottom: 0px;
  margin-top: 7px;
  width: 65px !important;
  text-align: center;
  text-transform: none;
}

form.roadAddressProject .form-control.small-input{
  width: 55px !important;
  margin-right: 11px;
}

form.roadAddressProject .split-form-control.small-input{
  width: 55px !important;
  margin-right: 11px;
}

form.roadAddressProject .form-control,
form.roadAddressProject .action-select{
  width: 190px !important;
  margin-top: 6px !important;
}

form.roadAddressProject .split-form-control{
  width: 190px !important;
  margin-top: 6px !important;
}

form.roadAddressProject .form-select-control{
  width: 100px !important;
  height: 27px;
  margin-top: 6px !important;
}

form.roadAddressProject .form-select-small-control{
  float: left;
  width: 55px !important;
  height: 27px;
  margin-top: 6px !important;
  margin-right: 11px !important;
}

form.roadAddressProject p {
  width: 60%;
}

.form-reserved-roads-list{
  display: flex;
  justify-content: center;
  align-items: center;
}

.form-project-errors-list{
  display: block;
  justify-content: center;
  align-items: center;
}

#projectErrors .warning label {
  color: @warning;
}

.form-editable-roadAddressProject > .control-label:first-child,
.form-editable-roadAddressProject > .control-label-projects:first-child {
  width: 0;
  max-width: 0;
  margin-right: 4px;
}
.modal-dialog form.roadAddressProject {
  margin-left: -20px;
}
.modal-dialog form.roadAddressProject .form-control {
  width: 170px !important;
  margin-top: 6px !important;
}

.modal-dialog form.roadAddressProject .split-form-control {
  width: 170px !important;
  margin-top: 6px !important;
}

form.node-search .form-control {
  margin-top: 6px !important;
}

form.node-search .control-label-small {
  margin-right: 11px;
  margin-top: 30px;
  margin-bottom: -10px;
  width: 55px !important;
  text-align: center;
}
/* ... */

